src/test/test-models/bad/compound-assign/plus_equals_bad_lhs_idxs.stan
transformed data {
  vector[3] x;
  real y;
  x[3,3] += y;
}
